# SLS2

./: README.md  TASK.md  audit_mechanics.py  custom_test.py  custom_train_ppo.py  evaluate_route_ppo.py  pyproject.toml  smoke_route_env.py  trace_route_ppo.py  train_ppo.py
1/: README.md  q_table.json  run_sim.py  test.md
READ/: Cards.md  Enemies.md  Mechanics.md  Project.md  Training.md
backup/: evaluate_battle_ppo.py  model_benchmark.py  trace_ppo.py
backup/1/: SIMULATOR_NOTES.md  train_rl.py
backup/battle_ai_reports1/: custom_battle_trace.txt  eval_boss_latest.csv  eval_easy_latest.csv  eval_elite_latest.csv  eval_full_latest.csv  eval_generic_battle.csv  eval_mid_latest.csv  trace_generic_battle.txt
backup/benchmarks/: run_20260616_180438_summary.md
backup/paused_route_ai_20260616/: evaluate_outer_route_ppo.py  train_outer_route_ppo.py
battle_ai/: __init__.py  env.py  samplers.py
battle_ai_reports/: custom_battle_trace.txt
battle_ai_reports/benchmarks/: history.csv  (+3 more)
decompiled/: --z__ReadOnlyList.cs  NSoulNexusVfx.cs  sts2.csproj
runs/: calcified_bonus_card_rank.csv  underdocks_route_eval_500.csv  underdocks_route_eval_500_latest.csv  underdocks_route_eval_after_mechanics_audit_200.csv  underdocks_route_eval_latest_500.csv  underdocks_route_eval_reward_soft_30.csv
sls2_rl/: __init__.py  baseline.py  combat_env.py  data.py  evaluate.py  train.py
sts2_sim/: __init__.py  agents.py  cards.py  data.py  effects.py  enemies.py  engine.py  evaluation.py  powers.py  rl.py  scenarios.py
tools/: extract_decompiled_data.py
(+2503 files in other folders)
