[project]
name = "sls2-rl"
version = "0.1.0"
description = "Simplified Slay the Spire 2 combat RL environment."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
rl = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.3",
  "sb3-contrib>=2.3",
  "torch>=2.0",
]

[tool.setuptools.packages.find]
include = ["sls2_rl*"]

